修改图标库名称

--- a/packages/svg/package.json
+++ b/packages/svg/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "icon",
     "svg",
-    "element-plus"
+    "hsmos-ui"
   ],
   "license": "MIT",
   "homepage": "https://element-plus.org/",
