--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@sxzz/eslint-config": "^2.4.5",
     "bumpp": "^9.0.0",
+    "cz-git": "^1.6.1",
     "eslint": "^8.35.0",
     "eslint-define-config": "^1.15.0",
     "prettier": "^2.8.4",
