--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "packageManager": "pnpm@7.13.2",
   "license": "MIT",
   "scripts": {
+    "cz": "czg",
     "dev": "pnpm run -C playground dev",
     "build": "pnpm run -C ./packages/vue build",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx,.json --max-warnings 0",
@@ -16,9 +17,15 @@
     "@sxzz/eslint-config": "^2.4.5",
     "bumpp": "^9.0.0",
     "cz-git": "^1.6.1",
+    
     "eslint": "^8.35.0",
     "eslint-define-config": "^1.15.0",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-git"
+    }
   }
 }
