build: 修改打包脚本,添加README文件

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -21,8 +21,7 @@
     "directory": "packages/vue"
   },
   "files": [
-    "dist",
-    "README.md"
+    "dist"
   ],
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
