--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hsmos-ui/icons-vue",
-  "version": "2.1.6",
+  "version": "2.1.1",
   "author": "cageek",
   "description": "Vue components of Hsmos UI Icons collection.",
   "type": "module",
@@ -21,9 +21,9 @@
     "directory": "packages/vue"
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
-  "readme": "./README.md",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/types/index.d.ts",
